--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "main": "./dist/job.js",
   "bin": {
-    "ryd": "./dist/job.js"
+    "ryd": "./bin/ryd.js"
   },
   "types": "./dist/job.d.ts",
   "scripts": {
@@ -19,10 +19,12 @@
     "build": "tsc"
   },
   "directories": {
-    "app": "app"
+    "app": "app",
+    "bin": "bin"
   },
   "files": [
     "dist/**/*",
+    "bin/**/*",
     "README.md",
     "package.json"
   ],
